--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auto-ria-average-prices",
+  "name": "auto-prices-statistics",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
